# opentui

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
examples/claude_code/: main.cpp
examples/debugger/: main.cpp
include/opentui/: command_registry.hpp  console.hpp  line_editor.hpp  signal_manager.hpp  tui_application.hpp  udp_client.hpp
scripts/: tasks.sh
src/: command_registry.cpp  console.cpp  line_editor.cpp  signal_manager.cpp  tui_application.cpp  udp_client.cpp
